--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,17 @@
             "name": "Liam Hammett",
             "email": "liam@liamhammett.com",
             "role": "Developer"
+        },
+        {
+            "name": "Chris Powell",
+            "email": "chris@ampedweb.dev",
+            "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.3",
-        "symfony/css-selector": "^7.0"
+        "symfony/css-selector": "^7.0",
+        "ext-dom": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.3.2",
