--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "require-dev": {
         "phpunit/phpunit": "^11.3.1",
         "friendsofphp/php-cs-fixer": "^3.21.1",
-        "spatie/ray": "^1.28"
+        "spatie/ray": "^1.28",
+        "ext-libxml": "*"
     },
     "autoload": {
         "psr-4": {
